--- a/.github/workflows/binrelease.yml
+++ b/.github/workflows/binrelease.yml
@@ -79,8 +79,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.check-or-create-release.outputs.upload_url }}
-        asset_path: ./target/x86_64-unknown-linux-gnu/release/Rstream
-        asset_name: Rstream-x86_64
+        asset_path: ./target/x86_64-unknown-linux-gnu/release/rstreamer
+        asset_name: Rstreamer-x86_64
         asset_content_type: application/octet-stream
 
   build-linux-aarch64:
@@ -109,8 +109,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.check-or-create-release.outputs.upload_url }}
-        asset_path: ./target/aarch64-unknown-linux-gnu/release/Rstream
-        asset_name: Rstream-aarch64
+        asset_path: ./target/aarch64-unknown-linux-gnu/release/rstreamer
+        asset_name: Rstreamer-aarch64
         asset_content_type: application/octet-stream
 
   build-linux-riscv64:
@@ -139,6 +139,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.check-or-create-release.outputs.upload_url }}
-        asset_path: ./target/riscv64gc-unknown-linux-gnu/release/Rstream
-        asset_name: Rstream-riscv64
+        asset_path: ./target/riscv64gc-unknown-linux-gnu/release/rstreamer
+        asset_name: Rstreamer-riscv64
         asset_content_type: application/octet-stream
