--- a/.github/workflows/binrelease.yml
+++ b/.github/workflows/binrelease.yml
@@ -97,7 +97,7 @@ jobs:
     - name: Install cross-compiler
       run: |
         sudo apt-get update
-        sudo apt-get install -y clang gcc-aarch64-linux-gnu
+        sudo apt-get install -y clang gcc-aarch64-linux-gnu gcc-aarch64-linux-gnu libc6-dev-arm64-cross
     - name: Build
       run: cargo build --release --target aarch64-unknown-linux-gnu
       env:
@@ -127,7 +127,7 @@ jobs:
     - name: Install cross-compiler
       run: |
         sudo apt-get update
-        sudo apt-get install -y clang gcc-riscv64-linux-gnu
+        sudo apt-get install -y clang gcc-riscv64-linux-gnu gcc-riscv64-linux-gnu libc6-dev-riscv64-cross
     - name: Build
       run: cargo build --release --target riscv64gc-unknown-linux-gnu
       env:
